--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <!-- Добавьте сюда пять разных HTML элементов -->
+    <header><strong>Welcome!</strong></header>
+    <nav>  
+        <ul><li>Главная</li><li>Навигация</li><li>Клиентам</li></ul>
+    </nav>
 </body>
 </html>
